# FIRE-auth

./: .env  .env.test  Cargo.toml  README.md  migrations.sql  private.pem
migrations/: migrations.sql  seeds.sql
src/: auth.rs  config.rs  constants.rs  db.rs  error.rs  lib.rs  main.rs  req.rs  server.rs  utils.rs
src/account/: model.rs
src/auth/: controller.rs  database.rs  jwt.rs  mod.rs  model.rs  repo.rs  repository.rs  service.rs
tests/: integration_test.rs
tests/common/: mod.rs
