[package]
name = "stockbit-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonwebtoken = "9.3.1"
serde = "1.0.218"
serde_json = "1.0.140"
rsa = "0.9.7"
postgres = "0.19.10"
dotenvy = "0.15.7"
bcrypt = "0.17.0"
chrono = "0.4.40"
thiserror = "2.0.12"
anyhow = { version = "1.0", default-features = false }